--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,5 @@
 NODE_ENV=development
 PORT=5000
+
+MONGO_URI= mongodb+srv://gdlmsn:2Q9JngR&4gY@expensestracker.xn7gs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
