--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 
 MONGO_URI= mongodb+srv://gdlmsn:2Q9JngR&4gY@expensestracker.xn7gs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
